--- a/reminder_app/templates/reminder_app/base_template.html
+++ b/reminder_app/templates/reminder_app/base_template.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users' %}">Users</a>
+                        <a class="nav-link" href="{% url 'accounts' %}">Users</a>
                     </li>
                 </ul>
             </div>
