--- a/reminder_app/templates/reminder_app/reminder_delete.html
+++ b/reminder_app/templates/reminder_app/reminder_delete.html
@@ -6,10 +6,10 @@
 <p>Are you sure you want to delete "{{ reminder.title }}"?</p>
 
 
-<form action="{% url 'delete_reminder' reminder.user.id reminder.id %}" method="POST">
+<form action="{% url 'delete_reminder' reminder.account.id reminder.id %}" method="POST">
 
     {% csrf_token %}
-    <a class="btn btn-primary" href="{{ reminder.user.get_absolute_url }}" role="button">Cancel</a>
+    <a class="btn btn-primary" href="{{ reminder.account.get_absolute_url }}" role="button">Cancel</a>
     
     <input class="btn btn-danger" type="submit" name="Submit">
 
