--- a/reminder_app/templates/registration/login.html
+++ b/reminder_app/templates/registration/login.html
@@ -1,5 +1,5 @@
 <!-- inherit from base.html -->
-{% extends 'portfolio_app/base_template.html' %}
+{% extends 'reminder_app/base_template.html' %}
 
 {% block content %}
 
@@ -39,6 +39,6 @@
 
   {# Assumes you setup the password_reset view in your URLconf #}
   <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-  <!-- <p><a href="{% url 'register_page' %}">Register</a></p> -->
+  <p><a href="{% url 'register_page' %}">Create an account</a></p>
 
 {% endblock %}
