--- a/reminder_app/templates/registration/register.html
+++ b/reminder_app/templates/registration/register.html
@@ -1,7 +1,7 @@
-{% extends 'portfolio_app/base_template.html' %}
+{% extends 'reminder_app/base_template.html' %}
 
 {% block content %}
-  <h2>UCCS Student Portfolio Registration</h2>
+  <h2>Account Registration</h2>
 
   <form method="post">
     {% csrf_token %}
