--- a/reminder_app/templates/reminder_app/base_template.html
+++ b/reminder_app/templates/reminder_app/base_template.html
@@ -29,6 +29,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts' %}">Users</a>
                     </li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
+                        {% else %}
+                            <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
