--- a/reminder_app/templates/reminder_app/reminder_delete.html
+++ b/reminder_app/templates/reminder_app/reminder_delete.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <a class="btn btn-primary" href="{{ reminder.account.get_absolute_url }}" role="button">Cancel</a>
     
-    <input class="btn btn-danger" type="submit" name="Submit">
+    <input class="btn btn-danger" type="submit" name="Submit" value="Delete">
 
 </form>
 
